# grpo-changes

./: eval_results.json  eval_results_02.json  logic_lockers.json  meh_qwen_gsm8k_eval_results.json  pyproject.toml  qwen_analysis_detailed.json  sum_product_chats.json
data/: gsm8k_test.jsonl
old/: eval_results_1st.json  qwen_hardest_20_percent.json
src/: analyze_failures.py  analyze_qwen_results.py  data_gsm8k.py  dataset_loader.py  extract_hardest_questions.py  qwen_eval_gsm8k.py  qwen_generator.py  run_decile_analysis.py  run_eval.py  run_get_hardest.py  utils_equality.py  utils_tags.py
src/generators/logic_locker/: generate.py  logic_lockers.json
src/generators/torch_gossip/: bridge_torch_gossip_100_rand.json  generate.py
src/generators/zebra/: generate.py  zebra_puzzles.json  zebra_puzzles.txt
